src/app/component/snapshots/jedit__app__component__workspace__test__render_preview_resize_test-5.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────┐┌Preview───────────────────────────────────────────────────────┐"
"│  root       ↑││  1 {                                                        ↑│"
"│> └─ web-app ║││  2   "servlet": [                                           █│"
"│             █││  3     {                                                    █│"
"│             █││  4       "servlet-name": "cofaxCDS",                        █│"
"│             █││  5       "servlet-class": "org.cofax.cds.CDSServlet",       ║│"
"│             █││  6       "init-param": {                                    ║│"
"│             █││  7         "configGlossary:installationAt": "Philadelphia,  ║│"
"│             █││  8         "configGlossary:adminEmail": "ksm@pobox.com",    ║│"
"│             █││  9         "configGlossary:poweredBy": "Cofax",             ║│"
"│             █││ 10         "configGlossary:poweredByIcon": "/images/cofax.g ║│"
"│             █││ 11         "configGlossary:staticPath": "/content/static",  ║│"
"│             █││ 12         "templateProcessorClass": "org.cofax.WysiwygTemp ║│"
"│             █││ 13         "templateLoaderClass": "org.cofax.FilesTemplateL ║│"
"│             █││ 14         "templatePath": "templates",                     ║│"
"│             █││ 15         "templateOverridePath": "",                      ║│"
"│             █││ 16         "defaultListTemplate": "listTemplate.htm",       ║│"
"│             █││                                                             ↓│"
"│             ↓││←████████████████████████████████████████═══════════════════→ │"
"└──────────────┘└──────────────────────────────────────────────────────────────┘"
