src/app/component/snapshots/jedit__app__component__workspace__test__render_preview_resize_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  root                   ↑││  1 {                                            ↑│"
"│> --web-app              ║││  2   "servlet": [                               █│"
"│                         █││  3     {                                        █│"
"│                         █││  4       "servlet-name": "cofaxCDS",            █│"
"│                         █││  5       "servlet-class": "org.cofax.cds.CDSSer ║│"
"│                         █││  6       "init-param": {                        ║│"
"│                         █││  7         "configGlossary:installationAt": "Ph ║│"
"│                         █││  8         "configGlossary:adminEmail": "ksm@po ║│"
"│                         █││  9         "configGlossary:poweredBy": "Cofax", ║│"
"│                         █││ 10         "configGlossary:poweredByIcon": "/im ║│"
"│                         █││ 11         "configGlossary:staticPath": "/conte ║│"
"│                         █││ 12         "templateProcessorClass": "org.cofax ║│"
"│                         █││ 13         "templateLoaderClass": "org.cofax.Fi ║│"
"│                         █││ 14         "templatePath": "templates",         ║│"
"│                         █││ 15         "templateOverridePath": "",          ║│"
"│                         █││ 16         "defaultListTemplate": "listTemplate ║│"
"│                         █││                                                 ↓│"
"│                         ↓││←█████████████████████████══════════════════════→ │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
