src/app/component/snapshots/jedit__app__component__workspace__test__render_preview_scroll_test-3.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  root                   ↑││ 11         "configGlossary:staticPath": "/conte ↑│"
"│> --web-app              ║││ 12         "templateProcessorClass": "org.cofax ║│"
"│                         █││ 13         "templateLoaderClass": "org.cofax.Fi ║│"
"│                         █││ 14         "templatePath": "templates",         █│"
"│                         █││ 15         "templateOverridePath": "",          █│"
"│                         █││ 16         "defaultListTemplate": "listTemplate ║│"
"│                         █││ 17         "defaultFileTemplate": "articleTempl ║│"
"│                         █││ 18         "useJSP": false,                     ║│"
"│                         █││ 19         "jspListTemplate": "listTemplate.jsp ║│"
"│                         █││ 20         "jspFileTemplate": "articleTemplate. ║│"
"│                         █││ 21         "cachePackageTagsTrack": 200,        ║│"
"│                         █││ 22         "cachePackageTagsStore": 200,        ║│"
"│                         █││ 23         "cachePackageTagsRefresh": 60,       ║│"
"│                         █││ 24         "cacheTemplatesTrack": 100,          ║│"
"│                         █││ 25         "cacheTemplatesStore": 50,           ║│"
"│                         █││ 26         "cacheTemplatesRefresh": 15,         ║│"
"│                         █││                                                 ↓│"
"│                         ↓││←█████████████████████████══════════════════════→ │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
