src/app/component/snapshots/jedit__app__component__workspace__test__render_preview_scroll_test-5.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree─────────────────────┐┌Preview────────────────────────────────────────────┐"
"│  root                  ↑││ "init-param": {                                  ↑│"
"│> --web-app             ║││   "configGlossary:installationAt": "Philadelphia ║│"
"│                        █││   "configGlossary:adminEmail": "ksm@pobox.com",  █│"
"│                        █││   "configGlossary:poweredBy": "Cofax",           █│"
"│                        █││   "configGlossary:poweredByIcon": "/images/cofax ║│"
"│                        █││   "configGlossary:staticPath": "/content/static" ║│"
"│                        █││   "templateProcessorClass": "org.cofax.WysiwygTe ║│"
"│                        █││   "templateLoaderClass": "org.cofax.FilesTemplat ║│"
"│                        █││   "templatePath": "templates",                   ║│"
"│                        █││   "templateOverridePath": "",                    ║│"
"│                        █││   "defaultListTemplate": "listTemplate.htm",     ║│"
"│                        █││   "defaultFileTemplate": "articleTemplate.htm",  ║│"
"│                        █││   "useJSP": false,                               ║│"
"│                        █││   "jspListTemplate": "listTemplate.jsp",         ║│"
"│                        █││   "jspFileTemplate": "articleTemplate.jsp",      ║│"
"│                        █││   "cachePackageTagsTrack": 200,                  ║│"
"│                        █││                                                  ↓│"
"│                        ↓││←═══███████████████████████████══════════════════→ │"
"└─────────────────────────┘└───────────────────────────────────────────────────┘"
