src/app/component/snapshots/jedit__app__component__workspace__test__render_preview_scroll_test-6.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  root                   ↑││  6 t-param": {                                  ↑│"
"│> --web-app              ║││  7 onfigGlossary:installationAt": "Philadelphia ║│"
"│                         █││  8 onfigGlossary:adminEmail": "ksm@pobox.com",  █│"
"│                         █││  9 onfigGlossary:poweredBy": "Cofax",           █│"
"│                         █││ 10 onfigGlossary:poweredByIcon": "/images/cofax ║│"
"│                         █││ 11 onfigGlossary:staticPath": "/content/static" ║│"
"│                         █││ 12 emplateProcessorClass": "org.cofax.WysiwygTe ║│"
"│                         █││ 13 emplateLoaderClass": "org.cofax.FilesTemplat ║│"
"│                         █││ 14 emplatePath": "templates",                   ║│"
"│                         █││ 15 emplateOverridePath": "",                    ║│"
"│                         █││ 16 efaultListTemplate": "listTemplate.htm",     ║│"
"│                         █││ 17 efaultFileTemplate": "articleTemplate.htm",  ║│"
"│                         █││ 18 seJSP": false,                               ║│"
"│                         █││ 19 spListTemplate": "listTemplate.jsp",         ║│"
"│                         █││ 20 spFileTemplate": "articleTemplate.jsp",      ║│"
"│                         █││ 21 achePackageTagsTrack": 200,                  ║│"
"│                         █││                                                 ↓│"
"│                         ↓││←═════█████████████████████████═════════════════→ │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
