src/app/component/snapshots/jedit__app__component__workspace__test__render_preview_scroll_test-7.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree─────────────────────┐┌Preview────────────────────────────────────────────┐"
"│  root                  ↑││  6  "init-param": {                              ↑│"
"│> --web-app             ║││  7    "configGlossary:installationAt": "Philadel ║│"
"│                        █││  8    "configGlossary:adminEmail": "ksm@pobox.co █│"
"│                        █││  9    "configGlossary:poweredBy": "Cofax",       █│"
"│                        █││ 10    "configGlossary:poweredByIcon": "/images/c ║│"
"│                        █││ 11    "configGlossary:staticPath": "/content/sta ║│"
"│                        █││ 12    "templateProcessorClass": "org.cofax.Wysiw ║│"
"│                        █││ 13    "templateLoaderClass": "org.cofax.FilesTem ║│"
"│                        █││ 14    "templatePath": "templates",               ║│"
"│                        █││ 15    "templateOverridePath": "",                ║│"
"│                        █││ 16    "defaultListTemplate": "listTemplate.htm", ║│"
"│                        █││ 17    "defaultFileTemplate": "articleTemplate.ht ║│"
"│                        █││ 18    "useJSP": false,                           ║│"
"│                        █││ 19    "jspListTemplate": "listTemplate.jsp",     ║│"
"│                        █││ 20    "jspFileTemplate": "articleTemplate.jsp",  ║│"
"│                        █││ 21    "cachePackageTagsTrack": 200,              ║│"
"│                        █││                                                  ↓│"
"│                        ↓││←═══██████████████████████████═══════════════════→ │"
"└─────────────────────────┘└───────────────────────────────────────────────────┘"
