src/app/component/snapshots/jedit__app__component__workspace__test__render_preview_scroll_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree─────────────────────┐┌Preview────────────────────────────────────────────┐"
"│  root                  ↑││{                                                 ↑│"
"│> --web-app             ║││  "servlet": [                                    █│"
"│                        █││    {                                             █│"
"│                        █││      "servlet-name": "cofaxCDS",                 █│"
"│                        █││      "servlet-class": "org.cofax.cds.CDSServlet" ║│"
"│                        █││      "init-param": {                             ║│"
"│                        █││        "configGlossary:installationAt": "Philade ║│"
"│                        █││        "configGlossary:adminEmail": "ksm@pobox.c ║│"
"│                        █││        "configGlossary:poweredBy": "Cofax",      ║│"
"│                        █││        "configGlossary:poweredByIcon": "/images/ ║│"
"│                        █││        "configGlossary:staticPath": "/content/st ║│"
"│                        █││        "templateProcessorClass": "org.cofax.Wysi ║│"
"│                        █││        "templateLoaderClass": "org.cofax.FilesTe ║│"
"│                        █││        "templatePath": "templates",              ║│"
"│                        █││        "templateOverridePath": "",               ║│"
"│                        █││        "defaultListTemplate": "listTemplate.htm" ║│"
"│                        █││                                                  ↓│"
"│                        ↓││←████████████████████████████════════════════════→ │"
"└─────────────────────────┘└───────────────────────────────────────────────────┘"
