src/app/component/snapshots/jedit__app__component__workspace__test__render_preview_test-2.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree─────────────────────┐┌Preview────────────────────────────────────────────┐"
"│  root                  ↑││  1 "value"                                        │"
"│> --key                 ║││                                                   │"
"│  --array               █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        ║││                                                   │"
"│                        ↓││                                                   │"
"└─────────────────────────┘└───────────────────────────────────────────────────┘"
