src/app/component/snapshots/jedit__app__component__workspace__test__render_preview_test-3.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree─────────────────────┐┌Preview────────────────────────────────────────────┐"
"│  root                  ↑││  1 [                                              │"
"│  --key                 ║││  2   1,                                           │"
"│> --array               ║││  3   2,                                           │"
"│                        █││  4   [                                            │"
"│                        █││  5     "cat",                                     │"
"│                        █││  6     "dog"                                      │"
"│                        █││  7   ]                                            │"
"│                        █││  8 ]                                              │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        ↓││                                                   │"
"└─────────────────────────┘└───────────────────────────────────────────────────┘"
